Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105688

developer-build fails for QtApplicationManager

    XMLWordPrintable

Details

    • Linux/Yocto
    • 5a320132d8 (qt/qtapplicationmanager/dev) 3e0d60fb88 (qt/qtapplicationmanager/6.4) 3e0d60fb88 (qt/tqtc-qtapplicationmanager/6.4) 5a320132d8 (qt/tqtc-qtapplicationmanager/dev)

    Description

      developer-build fails for QtApplicationManager:

      agent:2022/08/16 06:49:58 build.go:394: | /home/qt/work/build/build/tmp/work/core2-64-poky-linux/qtapplicationmanager/6.5.0-r0/git/src/manager-lib/applicationmanager.cpp: In member function 'bool QtAM::ApplicationManager::startApplicationInternal(const QString&, const QString&, const QString&, const QString&, QVector<int>&&)':
      agent:2022/08/16 06:49:58 build.go:394: | /home/qt/work/build/build/tmp/work/core2-64-poky-linux/qtapplicationmanager/6.5.0-r0/git/src/manager-lib/applicationmanager.cpp:776:26: error: ignoring return value of 'ssize_t write(int, const void*, size_t)', declared with attribute warn_unused_result [-Werror=unused-result]
      agent:2022/08/16 06:49:58 build.go:394: |   776 |                     write(fd, noRedirectMsg, qstrlen(noRedirectMsg));
      agent:2022/08/16 06:49:58 build.go:394: |       |                     ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      agent:2022/08/16 06:49:58 build.go:394: | /home/qt/work/build/build/tmp/work/core2-64-poky-linux/qtapplicationmanager/6.5.0-r0/git/src/manager-lib/applicationmanager.cpp:777:26: error: ignoring return value of 'ssize_t write(int, const void*, size_t)', declared with attribute warn_unused_result [-Werror=unused-result]
      agent:2022/08/16 06:49:58 build.go:394: |   777 |                     write(fd, "\n", 1);
      agent:2022/08/16 06:49:58 build.go:394: |       |                     ~~~~~^~~~~~~~~~~~~
      agent:2022/08/16 06:49:58 build.go:394: | cc1plus: all warnings being treated as errors 

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rgriebl Robert Griebl
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes