Work around unused result issue in gcc

This fixes compilation errors even for older versions of glibc.

Change-Id: I930010d20cff1dac7340c5897e39a929b3054cbd
Fixes: QTBUG-105688
Pick-to: 6.4
Reviewed-by: Dominik Holland <dominik.holland@qt.io>